--- a/sap.qmd
+++ b/sap.qmd
@@ -67,6 +67,7 @@ library(feasts)
 library(urca)
 library(downloadthis)
 library(fpp3)
+library(fable.prophet)
 los <- read.csv("./NHFD_Data/los_apr_22.csv")
 names(los) <-c("my", "ptnum", 
                "acutelos", 
@@ -92,7 +93,7 @@ fable_1 <- ts_vol %>%
   model(  
     ets = ETS(ptnum ~ error("M") + trend("M") + season("M")),
     arima = ARIMA(ptnum ~ 0 + pdq(1, 1, 1) + PDQ(1, 1, 1)),
-    snaive = SNAIVE(ptnum)
+    prophet = prophet(ptnum ~ growth("linear") + season("year", type = "multiplicative"))
   )
 forecast_1 <- forecast(fable_1, 
                        h = "3 years") 
@@ -111,12 +112,12 @@ arima_mean <- mean(arima_means$.mean)
 ets_means <- forecast_1 %>% 
   filter(.model=='ets')
 ets_mean <- mean(ets_means$.mean)
-snaive_means <- forecast_1 %>% 
-  filter(.model=='snaive')
-snaive_mean <- mean(snaive_means$.mean)
-print_mean <- mean(c(snaive_mean, 
-                     ets_mean, 
-                     arima_mean)) |> 
+prophet_means <- forecast_1 %>% 
+  filter(.model=='prophet')
+prophet_mean <- mean(prophet_means$.mean)
+print_mean <- mean(c(ets_mean, 
+                     arima_mean,
+                     prophet_mean)) |> 
   round(2)
 
 ```
@@ -135,7 +136,9 @@ los %>%
 ```
 
 
-We conducted a time series forecast (ARIMA, ETS and Naive (SNAIVE)) based on discharges from Wythenshawe over the period 2011 - 2022. This suggests an expected mean number of presentations per month (simple average of 3 model estimates) of `r print_mean`. At this rate, we would expect ~`r print_mean` x 24 = `r print_mean*24` patients to have surgical repair of fractured neck of femur over the 24 month recruitment course of the trial.  
+We conducted a number of time series forecasts using Autogregressive (ARIMA), exponential state-space smoothing (ETS) and Facebook's "Prophet" model (Prophet). Final expected values were based on simple unweighted averages of the 3 estimates. 80% and 95% confidence intervals for each prediction are shown in the relevant plot.
+
+Forecasts based on discharges from Wythenshawe over the period 2011 - 2022. This suggests an expected mean number of presentations per month of `r print_mean`. At this rate, we would expect ~`r print_mean` x 24 = `r print_mean*24` patients to have surgical repair of fractured neck of femur over the 24 month recruitment course of the trial.  
 
 ### Length of stay
 ```{r echo=TRUE, results='show', message=FALSE}
@@ -157,7 +160,7 @@ p
 fable_2 <- ts_acute_los %>% model(  
   ets = ETS(acutelos ~  error("M") + trend("M") + season("M")),
   arima = ARIMA(acutelos ~ 0 + pdq(1, 1, 1) + PDQ(1, 1, 1)),
-  snaive = SNAIVE(acutelos)
+  prophet = prophet(acutelos ~ growth("linear") + season("year", type = "multiplicative"))
 )
 forecast_2 <- forecast(fable_2, h = "3 years")
 autoplot(forecast_2, data=acute_los, level=c(80,95)) +
@@ -168,16 +171,21 @@ autoplot(forecast_2, data=acute_los, level=c(80,95)) +
        y="Number of patients")
 
 
-arima_means <- forecast_2 %>% filter(.model=='arima')
+arima_means <- forecast_2 %>% 
+  filter(.model=='arima')
 arima_mean <- mean(arima_means$.mean)
-ets_means <- forecast_2 %>% filter(.model=='ets')
+ets_means <- forecast_2 %>% 
+  filter(.model=='ets')
 ets_mean <- mean(ets_means$.mean)
-snaive_means <- forecast_2 %>% filter(.model=='snaive')
-snaive_mean <- mean(snaive_means$.mean)
-print_mean_2 <- mean(c(snaive_mean, ets_mean, arima_mean)) |> round(2)
+prophet_means <- forecast_2 %>% 
+  filter(.model=='prophet')
+prophet_mean <- mean(prophet_means$.mean)
+print_mean_2 <- mean(c(ets_mean, 
+                       arima_mean,
+                       prophet_mean)) |> round(2)
 
 ```
-We conducted a further time series forecast (ARIMA, ETS and Naive (SNAIVE)) based on discharges from Wythenshawe over the period 2011 - 2022. This suggests an expected mean length of stay per patient (simple average of 3 model estimates of LOS in days) of `r print_mean_2`. This means that while it is unlikely for patients to be in hospital longer than 2 weeks, we will have adequate time to give Anakinra for up to 72 hours post treatment, even if surgery is delayed.
+Forecast modelling of length of stay (LOS) suggests an expected mean length of stay per patient of `r print_mean_2`. This means that while it is unlikely for patients to be in hospital longer than 2 weeks, we will have adequate time to give Anakinra for up to 72 hours post treatment, even if surgery is delayed.
 
 ### General Anaesthetic
 ```{r echo=TRUE, results='hide', message=FALSE}
@@ -207,7 +215,7 @@ p
 fable_3 <- ts_ana %>% model(  
   ets = ETS(ga ~ error("M") + trend("M") + season("M")),
   arima = ARIMA(ga ~ 0 + pdq(1, 1, 1) + PDQ(1, 1, 1)),
-  snaive = SNAIVE(ga)
+  prophet = prophet(ga ~ growth("linear") + season("year", type = "multiplicative"))
 )
 forecast_3 <- forecast(fable_3, h = "3 years")
 autoplot(forecast_3, data=ana, level=c(80,95)) +
@@ -222,9 +230,13 @@ arima_means <- forecast_3 %>% filter(.model=='arima')
 arima_mean <- mean(arima_means$.mean)
 ets_means <- forecast_3 %>% filter(.model=='ets')
 ets_mean <- mean(ets_means$.mean)
-snaive_means <- forecast_3 %>% filter(.model=='snaive')
-snaive_mean <- mean(snaive_means$.mean)
-print_mean_3 <- mean(c(snaive_mean, ets_mean, arima_mean)) |> round(2)
+prophet_means <- forecast_3 %>% 
+  filter(.model=='prophet')
+prophet_mean <- mean(prophet_means$.mean)
+print_mean_3 <- mean(c(ets_mean, 
+                       arima_mean,
+                       prophet_mean)) |> 
+  round(2)
 ```
 ```{r echo=FALSE, results='show', message=TRUE}
 ana <- read.csv("./NHFD_Data/ana_apr_22.csv")
@@ -269,7 +281,7 @@ p
 fable_4 <- ts_spinal%>% model(  
   ets = ETS(spinal ~ error("M") + trend("M") + season("M")),
   arima = ARIMA(spinal ~ 0 + pdq(1, 1, 1) + PDQ(1, 1, 1)),
-  snaive = SNAIVE(spinal)
+  prophet = prophet(spinal ~ growth("linear") + season("year", type = "multiplicative"))
 )
 forecast_4 <- forecast(fable_4, h = "3 years")
 autoplot(forecast_4, data=spinal, level=c(80,95)) +
@@ -284,9 +296,12 @@ arima_means <- forecast_4 %>% filter(.model=='arima')
 arima_mean <- mean(arima_means$.mean)
 ets_means <- forecast_4 %>% filter(.model=='ets')
 ets_mean <- mean(ets_means$.mean)
-snaive_means <- forecast_4 %>% filter(.model=='snaive')
-snaive_mean <- mean(snaive_means$.mean)
-print_mean_4 <- mean(c(snaive_mean, ets_mean, arima_mean)) |> round(2)
+prophet_means <- forecast_4 %>% 
+  filter(.model=='prophet')
+prophet_mean <- mean(prophet_means$.mean)
+print_mean_4 <- mean(c(ets_mean, 
+                       arima_mean,
+                       prophet_mean)) |> round(2)
 ```
 
 A forecast based on the percentage of patients discharged from Wythenshawe who had a Spinal Anaesthetic over the period 2011 - 2022. This suggests an expected mean percentage Spinal recipients (simple average of 3 model estimates of %Spinal) of `r print_mean_4`%. 
