--- a/protocol.qmd
+++ b/protocol.qmd
@@ -484,7 +484,7 @@ In the UK, 65,000 people fracture their hip every year(3). On average, 7% of the
 **Hip fracture types**
 
 Fractures of the hip are divided into intra-capsular and extracapsular. The 
-"capsule" refers to the fibrous tissue containing a rich blood supply to the head of the hip which envelops the hip joint (ball:*femoral head* and socket:*acetabulum*). Intra-capsular fractures have the potential to disrupt the blood flow to the femoral head and cause avascular necrosis, especially if they are *displaced*. This is one of the reasons replacement of the femoral head, and the acetabulum (its socket) is preferred in intracapsular fractures. Extracapsular fractures occur outside the capsule and are less likely to disrupt bloodflow, occuring as they do in very vascular "cancellous" bone. Thesee can be managed using a dynamic (or sliding) hip screw. Extracapsular fractres can also be subdivided into stable and unstable, depending on the radiographic appearance of the lesser trochanter fragment.
+"capsule" refers to the fibrous tissue containing a rich blood supply to the head of the hip which envelops the hip joint (ball:*femoral head* and socket:*acetabulum*). Intra-capsular fractures have the potential to disrupt the blood flow to the femoral head and cause avascular necrosis, especially if they are *displaced*. This is one of the reasons replacement of the femoral head, and the acetabulum (its socket) is preferred in intracapsular fractures. Extracapsular fractures occur outside the capsule and are less likely to disrupt bloodflow, occuring as they do in vascular "cancellous" bone. Thesee can be managed using a dynamic (or sliding) hip screw. Extracapsular fractres can also be subdivided into stable and unstable, depending on the radiographic appearance of the lesser trochanter fragment.
 
 Four aspects of compliance with NICE recommendations have been combined into a single key performance indicator, KPI 3 (NHFD Report 2021):
 
